Multiplayer working, run server.java and client.java